[develop] swagger /api/routes model change; Route change.
